--- a/ТосолИмпорт/index.html
+++ b/ТосолИмпорт/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ТосолИмпорт</title>
+  <title>ООО "ТосолИмпорт"</title>
   <link rel="icon" type="image/png" href="assets/images/Favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -43,7 +43,7 @@
     <nav style="background-color: #008686; --menu-bg-color: #008686; --menu-link-color: #ffd180;">
       <div class="nav-container">
         <div class="site-branding" style="display: flex; flex-direction: column; margin-right: 2rem;">
-          <div class="logo" style="color: #ffffff">ТосолИмпорт</div>
+          <div class="logo" style="color: #ffffff">ООО "ТосолИмпорт"</div>
           
         </div>
         <button class="menu-toggle" aria-label="Menu">
