--- a/cati/certificates.html
+++ b/cati/certificates.html
@@ -6,14 +6,14 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="author" content="ООО «ЦАТИ»">
-    <meta name="description" content="Лицензии и сертификаты ООО «ЦАТИ». Лицензированная деятельность в соответствии с полученными лицензиями и сертификатами регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ, СДС «Военный стандарт», Федеральная служба по аккредитации.">
-    <meta name="keywords" content="ЦАТИ, лицензии, сертификаты, ФАВТ, МИНПРОМТОРГ, СДС Военный стандарт, аккредитация, сертификация, авиационная техника">
+    <meta name="description" content="Лицензии и сертификаты ООО «ЦАТИ». Лицензированная деятельность в соответствии с полученными лицензиями и сертификатами регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ, РОСКОСМОС, СДС «Военный стандарт», Федеральная служба по аккредитации.">
+    <meta name="keywords" content="ЦАТИ, лицензии, сертификаты, ФАВТ, РОСКОСМОС, МИНПРОМТОРГ, СДС Военный стандарт, аккредитация, сертификация, авиационная техника, космические аппараты">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cati.pro/certificates.html">
     <meta property="og:title" content="Лицензии и сертификаты ЦАТИ">
-    <meta property="og:description" content="Лицензии и сертификаты ООО «ЦАТИ». Лицензированная деятельность в соответствии с полученными лицензиями и сертификатами регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ, СДС «Военный стандарт», Федеральная служба по аккредитации.">
+    <meta property="og:description" content="Лицензии и сертификаты ООО «ЦАТИ». Лицензированная деятельность в соответствии с полученными лицензиями и сертификатами регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ, РОСКОСМОС, СДС «Военный стандарт», Федеральная служба по аккредитации.">
     <meta property="og:image" content="https://cati.pro/images/tild6466-6661-4666-b763-613734663662__5802b520-d682-46d0-a.png">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:site_name" content="ЦАТИ">
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://cati.pro/certificates.html">
     <meta name="twitter:title" content="Лицензии и сертификаты ЦАТИ">
-    <meta name="twitter:description" content="Лицензии и сертификаты ООО «ЦАТИ». Лицензированная деятельность в соответствии с полученными лицензиями и сертификатами регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ, СДС «Военный стандарт», Федеральная служба по аккредитации.">
+    <meta name="twitter:description" content="Лицензии и сертификаты ООО «ЦАТИ». Лицензированная деятельность в соответствии с полученными лицензиями и сертификатами регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ, РОСКОСМОС, СДС «Военный стандарт», Федеральная служба по аккредитации.">
     <meta name="twitter:image" content="https://cati.pro/images/tild6466-6661-4666-b763-613734663662__5802b520-d682-46d0-a.png">
     
     <!-- Canonical URL -->
@@ -128,7 +128,7 @@
             <div class="page-header__content">
                 <h1 class="page-header__title">Лицензии и сертификаты</h1>
                 <div class="page-header__divider"></div>
-                <p class="page-header__subtitle">ООО «ЦАТИ» осуществляет лицензированную деятельность в соответствии с полученными лицензиями, сертификатами и допусками регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ (Федеральное агентство воздушного транспорта), СДС «Военный стандарт», Федеральная служба по аккредитации.</p>
+                <p class="page-header__subtitle">ООО «ЦАТИ» осуществляет лицензированную деятельность в соответствии с полученными лицензиями, сертификатами и допусками регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ (Федеральное агентство воздушного транспорта), РОСКОСМОС, СДС «Военный стандарт», Федеральная служба по аккредитации.</p>
             </div>
         </div>
     </section>
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 id="certificates-heading" class="section-title">Лицензии и сертификаты</h2>
-                <p class="section-descr">ООО «ЦАТИ» осуществляет лицензированную деятельность в соответствии с полученными лицензиями, сертификатами и допусками регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ (Федеральное агентство воздушного транспорта), СДС «Военный стандарт», Федеральная служба по аккредитации.</p>
+                <p class="section-descr">ООО «ЦАТИ» осуществляет лицензированную деятельность в соответствии с полученными лицензиями, сертификатами и допусками регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ (Федеральное агентство воздушного транспорта), РОСКОСМОС, СДС «Военный стандарт», Федеральная служба по аккредитации.</p>
             </div>
 
             <div class="certificates__grid">
@@ -159,9 +159,15 @@
                             <li><strong>Область:</strong> разработка и ремонт авиационной техники</li>
                         </ul>
                         <p class="certificate-card__descr">Официальная выписка из реестра лицензий подтверждает право ООО «ЦАТИ» на разработку, производство, испытания и ремонт авиационной техники по лицензии № 14871-АТ.</p>
-                        <a href="pdf/minpromtorg-license-2021.pdf" 
-                           download
-                           class="certificate-card__link">Скачать</a>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/minpromtorg-license-2021.pdf" 
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://minpromtorg.gov.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
                     </div>
                 </article>
 
@@ -182,9 +188,15 @@
                             <li><strong>Назначение:</strong> техническое обслуживание ВС</li>
                         </ul>
                         <p class="certificate-card__descr">Документ подтверждает, что «ЦАТИ» аккредитовано в качестве организации по техническому обслуживанию гражданских воздушных судов и может выполнять плановые и внеплановые формы ТО.</p>
-                        <a href="pdf/favt-maintenance-285-21-053-2021.pdf"
-                           download
-                           class="certificate-card__link">Скачать</a>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/favt-maintenance-285-21-053-2021.pdf"
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://favt.gov.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
                     </div>
                 </article>
 
@@ -205,9 +217,15 @@
                             <li><strong>Объект:</strong> система менеджмента качества</li>
                         </ul>
                         <p class="certificate-card__descr">Сертификат соответствия подтверждает, что производство интерьеров и комплектаций ООО «ЦАТИ» отвечает требованиям системы добровольной сертификации «Военный стандарт».</p>
-                        <a href="pdf/sds-vs-01-2353-2025.pdf"
-                           download
-                           class="certificate-card__link">Скачать</a>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/sds-vs-01-2353-2025.pdf"
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://voenstandart.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
                     </div>
                 </article>
 
@@ -228,9 +246,15 @@
                             <li><strong>Область:</strong> ремонт и модернизация</li>
                         </ul>
                         <p class="certificate-card__descr">Разрешение на выполнение ремонтных и восстановительных работ по авиационному оборудованию и интерьерным комплектам воздушных судов.</p>
-                        <a href="pdf/favt-r-108.pdf"
-                           download
-                           class="certificate-card__link">Скачать</a>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/favt-r-108.pdf"
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://favt.gov.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
                     </div>
                 </article>
 
@@ -238,7 +262,7 @@
                          data-pdf="pdf/favt-i-79.pdf"
                          data-title="Сертификат ФАВТ-И-79">
                     <div class="certificate-card__image" tabindex="0" role="button" aria-label="Открыть сертификат «Сертификат ФАВТ-И-79»">
-                        <img src="images/tild6539-3538-4863-a535-666263653836__cert_roscosmos.png" 
+                        <img src="images/tild3036-3532-4131-b135-383931376463__cert_favt.png" 
                              alt="Сертификат ФАВТ-И-79" 
                              class="certificate-card__img"
                              loading="lazy">
@@ -251,9 +275,43 @@
                             <li><strong>Область:</strong> инженерные и производственные работы</li>
                         </ul>
                         <p class="certificate-card__descr">Подтверждает компетенции «ЦАТИ» в проектировании, изготовлении и внедрении интерьерных решений для гражданских воздушных судов.</p>
-                        <a href="pdf/favt-i-79.pdf"
-                           download
-                           class="certificate-card__link">Скачать</a>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/favt-i-79.pdf"
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://favt.gov.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="certificate-card"
+                         data-pdf="pdf/roskosmos-litsenzija.pdf"
+                         data-title="Лицензия РОСКОСМОС">
+                    <div class="certificate-card__image" tabindex="0" role="button" aria-label="Открыть сертификат «Лицензия РОСКОСМОС»">
+                        <img src="images/tild6539-3538-4863-a535-666263653836__cert_roscosmos.png" 
+                             alt="Лицензия РОСКОСМОС" 
+                             class="certificate-card__img"
+                             loading="lazy">
+                    </div>
+                    <div class="certificate-card__content">
+                        <h3 class="certificate-card__title">Лицензия РОСКОСМОС</h3>
+                        <ul class="certificate-card__meta">
+                            <li><strong>Регулятор:</strong> Государственная корпорация по космической деятельности «РОСКОСМОС»</li>
+                            <li><strong>Область:</strong> создание космических аппаратов и разработка панелей солнечных батарей</li>
+                        </ul>
+                        <p class="certificate-card__descr">Лицензия на создание космических аппаратов, кораблей и станций, а также разработку и изготовление панелей солнечных батарей для космической техники.</p>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/roskosmos-litsenzija.pdf"
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://www.roscosmos.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
                     </div>
                 </article>
 
@@ -274,9 +332,15 @@
                             <li><strong>Назначение:</strong> испытательная лаборатория</li>
                         </ul>
                         <p class="certificate-card__descr">Аккредитация испытательной лаборатории «ЦАТИ» подтверждает право проводить контроль качества материалов и комплектующих для авиационных интерьеров.</p>
-                        <a href="pdf/accreditation-il-ros-000403.pdf"
-                           download
-                           class="certificate-card__link">Скачать</a>
+                        <div class="certificate-card__actions">
+                            <a href="pdf/accreditation-il-ros-000403.pdf"
+                               download
+                               class="certificate-card__link">Скачать</a>
+                            <a href="https://fsa.gov.ru" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Сайт регулятора</a>
+                        </div>
                     </div>
                 </article>
             </div>
@@ -398,7 +462,7 @@
                             КПП: 772001001
                         </p>
                         <p class="footer__legal-text" style="margin-top: var(--spacing-sm);">
-                            Лицензированная деятельность в соответствии с полученными лицензиями, сертификатами и допусками регулирующих органов: Министерство транспорта РФ, ФАВТ, РОСКОСМОС, МИНПРОМТОРГ РОССИИ, УФСБ России, «Военный Стандарт».
+                            Лицензированная деятельность в соответствии с полученными лицензиями, сертификатами и допусками регулирующих органов: МИНПРОМТОРГ РОССИИ, ФАВТ (Федеральное агентство воздушного транспорта), РОСКОСМОС, СДС «Военный стандарт», Федеральная служба по аккредитации.
                         </p>
                     </div>
                 </div>
