--- a/cati/tesekkurler.html
+++ b/cati/tesekkurler.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anubis: Antik Mısır'ın Geçit Bekçisi. Ölülerin rehberi ve kalbin tartılması geleneğinin koruyucusu hakkında bilgiler.">
-    <meta name="keywords" content="Anubis, Mısır tanrısı, antik Mısır, ölüler tanrısı, Duat, kalbin tartılması">
-    <title>Anubis: Antik Mısır'ın Geçit Bekçisi</title>
+    <meta name="description" content="Mesajınız başarıyla gönderildi. Teşekkürler!">
+    <title>Teşekkürler - Anubis</title>
     <link rel="icon" type="image/jpeg" href="images/favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,7 +23,7 @@
                         <span></span>
                     </button>
                     <ul class="nav-menu">
-                        <li><a href="index.html" class="active">Ana Sayfa</a></li>
+                        <li><a href="index.html">Ana Sayfa</a></li>
                         <li><a href="hakkimizda.html">Hakkında Anubis</a></li>
                         <li><a href="rituel.html">Ritüeller ve İnançlar</a></li>
                         <li><a href="galeri.html">Galeri</a></li>
@@ -36,80 +35,11 @@
     </header>
 
     <main>
-        <!-- Hero Bölümü -->
-        <section class="hero">
-            <div class="hero-overlay"></div>
+        <section class="thanks-section">
             <div class="container">
-                <div class="hero-content">
-                    <div class="hero-image-wrapper">
-                        <img src="images/hero.png" alt="Anubis" class="hero-image">
-                    </div>
-                    <div class="hero-text">
-                        <h1 class="hero-title">Anubis: Antik Mısır'ın Geçit Bekçisi</h1>
-                        <p class="hero-subtitle">Ölülerin rehberi ve kalbin tartılması geleneğinin koruyucusu. Antik Mısır'ın en gizemli tanrılarından biri olan Anubis, geçitlerin bekçisi ve adaletin gözlemcisidir.</p>
-                        <div class="hero-cta-section">
-                            <p class="hero-facts-text">550 fakt ve sırrı Anubis hakkında öğrenebilirsiniz!</p>
-                            <a href="iletisim.html" class="btn btn-primary">Öğren</a>
-                        </div>
-                        <a href="#roles" class="btn btn-secondary">Keşfet</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Anubis Tarih Araştırması Oyunu -->
-        <section class="quiz-launch-section">
-            <div class="container">
-                <div class="quiz-launch-wrapper">
-                    <h2 class="quiz-launch-title">Anubis Tarih Araştırması</h2>
-                    <p class="quiz-launch-subtitle">Antik Mısır'ın en gizemli tanrısı hakkındaki bilginizi test edin! Anubis'in tarihini, sembollerini ve mitolojisini keşfedin.</p>
-                    <p class="quiz-launch-description">22 soruluk interaktif bilgi yarışmasında Anubis hakkında ne kadar bilgili olduğunuzu öğrenin. Her doğru cevap size puan kazandıracak!</p>
-                    <a href="quiz.html" class="btn btn-primary quiz-launch-btn">Araştırmaya Başla</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Anubis'in Rolü -->
-        <section class="roles-section" id="roles">
-            <div class="container">
-                <h2 class="section-title">Anubis'in Rolü</h2>
-                <div class="roles-grid">
-                    <div class="role-card">
-                        <img src="images/1.jpg" alt="Ölülerin Rehberi" class="role-icon">
-                        <h3>Ölülerin Rehberi</h3>
-                        <p>Anubis, ölülerin ruhlarını Duat'a (ölüler dünyası) güvenli bir şekilde rehberlik eden tanrıdır. Onun koruması altında, ruhlar yeni yaşamlarına geçiş yapabilirler.</p>
-                    </div>
-                    <div class="role-card">
-                        <img src="images/2.jpg" alt="Kalbin Tartılması Geleneği" class="role-icon">
-                        <h3>Kalbin Tartılması Geleneği</h3>
-                        <p>Anubis, ölülerin kalplerini Maat'ın tüyü ile tartarak adaleti sağlar. Bu kutsal ritüel, ruhun ölüm sonrası yaşama geçişinde kritik bir rol oynar.</p>
-                    </div>
-                    <div class="role-card">
-                        <img src="images/3.jpg" alt="Geçişlerin Tanrısı" class="role-icon">
-                        <h3>Geçişlerin Tanrısı</h3>
-                        <p>Her geçişin bekçisi olan Anubis, yaşamdan ölüme, bilinmeyenden bilinene olan tüm yolları korur ve yönetir.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Mini Galeri -->
-        <section class="mini-gallery-section">
-            <div class="container">
-                <h2 class="section-title">Mini Galeri</h2>
-                <div class="gallery-grid">
-                    <div class="gallery-item" data-image="4">
-                        <img src="images/4.jpeg" alt="Tapınak Kabartmaları" class="gallery-placeholder">
-                        <p class="gallery-caption">Tapınak Kabartmaları</p>
-                    </div>
-                    <div class="gallery-item" data-image="5">
-                        <img src="images/5.jpeg" alt="Anubis Rölyefi" class="gallery-placeholder">
-                        <p class="gallery-caption">Anubis Rölyefi</p>
-                    </div>
-                    <div class="gallery-item" data-image="6">
-                        <img src="images/6.jpeg" alt="Kutsal Şakal Sembolü" class="gallery-placeholder">
-                        <p class="gallery-caption">Kutsal Şakal Sembolü</p>
-                    </div>
+                <div class="thanks-content">
+                    <h1 class="thanks-title">Teşekkürler! Mesajınız bize ulaştı.</h1>
+                    <a href="index.html" class="btn btn-primary">Ana Sayfaya Dön</a>
                 </div>
             </div>
         </section>
@@ -146,20 +76,7 @@
         </div>
     </footer>
 
-
-    <!-- Galeri Modal -->
-    <div id="imageModal" class="modal">
-        <div class="modal-content image-modal">
-            <span class="close-modal">&times;</span>
-            <div class="modal-body">
-                <div class="modal-image-placeholder" id="modalImage"></div>
-                <h3 id="modalImageTitle"></h3>
-                <p id="modalImageDesc"></p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Cookie Modal -->
+    <!-- Modals -->
     <div id="cookieModal" class="modal">
         <div class="modal-content">
             <span class="close-modal" onclick="closeModal(this.closest('.modal'))">&times;</span>
@@ -189,7 +106,6 @@
         </div>
     </div>
 
-    <!-- Terms Modal -->
     <div id="termsModal" class="modal">
         <div class="modal-content">
             <span class="close-modal" onclick="closeModal(this.closest('.modal'))">&times;</span>
@@ -227,7 +143,6 @@
         </div>
     </div>
 
-    <!-- Privacy Modal -->
     <div id="privacyModal" class="modal">
         <div class="modal-content">
             <span class="close-modal" onclick="closeModal(this.closest('.modal'))">&times;</span>
@@ -287,18 +202,12 @@
     </div>
 
     <script>
-        // Global function for mobile menu toggle (backup)
         function toggleMobileMenu(e) {
-            if (e) {
-                e.preventDefault();
-                e.stopPropagation();
-            }
+            if (e) { e.preventDefault(); e.stopPropagation(); }
             const navMenu = document.querySelector('.nav-menu');
             const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
-            
             if (navMenu && mobileMenuToggle) {
                 const isOpen = navMenu.classList.contains('active');
-                
                 if (isOpen) {
                     mobileMenuToggle.classList.remove('active');
                     navMenu.classList.remove('active');
@@ -316,35 +225,6 @@
                 }
             }
             return false;
-        }
-
-        // Global function for opening modals (backup)
-        function openModal(modalId, e) {
-            if (e) {
-                e.preventDefault();
-                e.stopPropagation();
-            }
-            const modal = document.getElementById(modalId);
-            if (modal) {
-                modal.classList.add('active');
-                document.body.style.overflow = 'hidden';
-                document.body.style.position = 'fixed';
-                document.body.style.width = '100%';
-            }
-            return false;
-        }
-
-        // Global function for closing modals
-        function closeModal(modal) {
-            if (typeof modal === 'string') {
-                modal = document.getElementById(modal);
-            }
-            if (modal) {
-                modal.classList.remove('active');
-                document.body.style.overflow = '';
-                document.body.style.position = '';
-                document.body.style.width = '';
-            }
         }
     </script>
     <script src="js/main.js"></script>
