--- a/cati/certificates.html
+++ b/cati/certificates.html
@@ -160,9 +160,6 @@
                         </ul>
                         <p class="certificate-card__descr">Официальная выписка из реестра лицензий подтверждает право ООО «ЦАТИ» на разработку, производство, испытания и ремонт авиационной техники по лицензии № 14871-АТ.</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/minpromtorg-license-2021.pdf" 
-                               download
-                               class="certificate-card__link">Скачать</a>
                             <a href="https://minpromtorg.gov.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
@@ -189,9 +186,10 @@
                         </ul>
                         <p class="certificate-card__descr">Документ подтверждает, что «ЦАТИ» аккредитовано в качестве организации по техническому обслуживанию гражданских воздушных судов и может выполнять плановые и внеплановые формы ТО.</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/favt-maintenance-285-21-053-2021.pdf"
-                               download
-                               class="certificate-card__link">Скачать</a>
+                            <a href="https://favt.gov.ru/public/plg/sertsootv/2021/285-21-053/285-21-053.pdf" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Документ</a>
                             <a href="https://favt.gov.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
@@ -218,10 +216,11 @@
                         </ul>
                         <p class="certificate-card__descr">Сертификат соответствия подтверждает, что производство интерьеров и комплектаций ООО «ЦАТИ» отвечает требованиям системы добровольной сертификации «Военный стандарт».</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/sds-vs-01-2353-2025.pdf"
-                               download
-                               class="certificate-card__link">Скачать</a>
-                            <a href="https://voenstandart.ru" 
+                            <a href="https://inis.ru/sertifikatsiya/sertifikatsiya-smk/os-smk/" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Раздел сайта</a>
+                            <a href="https://inis.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
                                class="certificate-card__source-link">Сайт регулятора</a>
@@ -247,9 +246,10 @@
                         </ul>
                         <p class="certificate-card__descr">Разрешение на выполнение ремонтных и восстановительных работ по авиационному оборудованию и интерьерным комплектам воздушных судов.</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/favt-r-108.pdf"
-                               download
-                               class="certificate-card__link">Скачать</a>
+                            <a href="https://favt.gov.ru/public/materials/c/c/5/1/2/cc51227d6378422bb1d2a1aa47dacbbe.pdf" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Документ</a>
                             <a href="https://favt.gov.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
@@ -276,9 +276,10 @@
                         </ul>
                         <p class="certificate-card__descr">Подтверждает компетенции «ЦАТИ» в проектировании, изготовлении и внедрении интерьерных решений для гражданских воздушных судов.</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/favt-i-79.pdf"
-                               download
-                               class="certificate-card__link">Скачать</a>
+                            <a href="https://favt.gov.ru/public/materials/0/1/3/2/4/013242cbabbea51047ccec284f461a8b.pdf" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Документ</a>
                             <a href="https://favt.gov.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
@@ -287,14 +288,23 @@
                     </div>
                 </article>
 
-                <article class="certificate-card"
-                         data-pdf="pdf/roskosmos-litsenzija.pdf"
-                         data-title="Лицензия РОСКОСМОС">
-                    <div class="certificate-card__image" tabindex="0" role="button" aria-label="Открыть сертификат «Лицензия РОСКОСМОС»">
-                        <img src="images/tild6539-3538-4863-a535-666263653836__cert_roscosmos.png" 
-                             alt="Лицензия РОСКОСМОС" 
-                             class="certificate-card__img"
-                             loading="lazy">
+                <article class="certificate-card">
+                    <div class="certificate-card__image certificate-card__image--placeholder">
+                        <svg width="120" height="120" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <!-- Документ -->
+                            <rect x="30" y="25" width="60" height="75" rx="2" fill="white" stroke="currentColor" stroke-width="2" opacity="0.3"/>
+                            <rect x="30" y="25" width="60" height="12" rx="2" fill="currentColor" opacity="0.15"/>
+                            <!-- Линии текста -->
+                            <line x1="40" y1="50" x2="80" y2="50" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" opacity="0.2"/>
+                            <line x1="40" y1="60" x2="75" y2="60" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" opacity="0.2"/>
+                            <line x1="40" y1="70" x2="70" y2="70" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" opacity="0.2"/>
+                            <line x1="40" y1="80" x2="80" y2="80" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" opacity="0.2"/>
+                            <!-- Печать/штамп -->
+                            <circle cx="75" cy="85" r="8" fill="none" stroke="currentColor" stroke-width="1.5" opacity="0.3"/>
+                            <path d="M70 85L75 90L80 85" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" opacity="0.3"/>
+                            <!-- Иконка документа -->
+                            <path d="M45 30L55 30L55 40L45 40Z" fill="currentColor" opacity="0.2"/>
+                        </svg>
                     </div>
                     <div class="certificate-card__content">
                         <h3 class="certificate-card__title">Лицензия РОСКОСМОС</h3>
@@ -303,10 +313,12 @@
                             <li><strong>Область:</strong> создание космических аппаратов и разработка панелей солнечных батарей</li>
                         </ul>
                         <p class="certificate-card__descr">Лицензия на создание космических аппаратов, кораблей и станций, а также разработку и изготовление панелей солнечных батарей для космической техники.</p>
+                        <p class="certificate-card__note" style="font-size: 0.85rem; color: var(--color-text-light); font-style: italic; margin-top: var(--spacing-sm);">Лицензия не актуальна. Документ не предоставлен.</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/roskosmos-litsenzija.pdf"
-                               download
-                               class="certificate-card__link">Скачать</a>
+                            <a href="https://licenses.roscosmos.ru/" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Реестр</a>
                             <a href="https://www.roscosmos.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
@@ -333,10 +345,11 @@
                         </ul>
                         <p class="certificate-card__descr">Аккредитация испытательной лаборатории «ЦАТИ» подтверждает право проводить контроль качества материалов и комплектующих для авиационных интерьеров.</p>
                         <div class="certificate-card__actions">
-                            <a href="pdf/accreditation-il-ros-000403.pdf"
-                               download
-                               class="certificate-card__link">Скачать</a>
-                            <a href="https://fsa.gov.ru" 
+                            <a href="https://rososnova.ru/reestr" 
+                               target="_blank" 
+                               rel="noopener noreferrer"
+                               class="certificate-card__source-link">Реестр</a>
+                            <a href="https://rososnova.ru" 
                                target="_blank" 
                                rel="noopener noreferrer"
                                class="certificate-card__source-link">Сайт регулятора</a>
