--- a/maximus/index.html
+++ b/maximus/index.html
@@ -25,7 +25,7 @@
                                 <a href="tel:+996312364000">+996 312 364 000</a>
                             </div>
                             <div class="email">
-                                <a href="mailto:info@maximum-logistic.kg">info@maximum-logistic.kg</a>
+                                <a href="mailto:maximum@tosol.kg">maximum@tosol.kg</a>
                             </div>
                         </div>
                     </div>
@@ -457,7 +457,7 @@
                     <h3>Контакты</h3>
                     <p><strong>Телефон:</strong> <a href="tel:+996312364000">+996 312 364 000</a></p>
                     <p><strong>Адрес:</strong> Кыргызстан, г. Бишкек, ул. Гражданская 53, офис 4</p>
-                    <p><strong>Email:</strong> info@maximum-logistic.kg</p>
+                    <p><strong>Email:</strong> maximum@tosol.kg</p>
                 </div>
                 <div class="footer-section">
                     <h3>Реквизиты</h3>
