--- a/maximus/privacy-policy.html
+++ b/maximus/privacy-policy.html
@@ -25,7 +25,7 @@
                                 <a href="tel:+996312364000">+996 312 364 000</a>
                             </div>
                             <div class="email">
-                                <a href="mailto:info@maximum-logistic.kg">info@maximum-logistic.kg</a>
+                                <a href="mailto:maximum@tosol.kg">maximum@tosol.kg</a>
                             </div>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                 <p><strong>ОсОО «Максимум Логистик Компани»</strong><br>
                 Адрес: Кыргызстан, г. Бишкек, ул. Гражданская 53, офис 4<br>
                 Телефон: <a href="tel:+996312364000">+996 312 364 000</a><br>
-                Email: <a href="mailto:info@maximum-logistic.kg">info@maximum-logistic.kg</a></p>
+                Email: <a href="mailto:maximum@tosol.kg">maximum@tosol.kg</a></p>
 
                 <p class="policy-signature">Настоящая Политика конфиденциальности вступает в силу с 1 января 2026 года.</p>
             </div>
@@ -238,7 +238,7 @@
                     <h3>Контакты</h3>
                     <p><strong>Телефон:</strong> <a href="tel:+996312364000">+996 312 364 000</a></p>
                     <p><strong>Адрес:</strong> Кыргызстан, г. Бишкек, ул. Гражданская 53, офис 4</p>
-                    <p><strong>Email:</strong> info@maximum-logistic.kg</p>
+                    <p><strong>Email:</strong> maximum@tosol.kg</p>
                 </div>
                 <div class="footer-section">
                     <h3>Реквизиты</h3>
